<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_copyright_value">ZoiPer 2022</string>
    <string name="about_label_brand">Brand: %s</string>
    <string name="about_label_copyright">Copyright: %s</string>
    <string name="about_label_library_revision">Library revision: %s</string>
    <string name="about_label_manufacturer">Manufacturer: %s</string>
    <string name="about_label_model">Model: %s</string>
    <string name="about_label_site">www.zoiper.com</string>
    <string name="about_title">%1$s %2$s</string>
    <string name="about_warning">This software is protected by a number of laws.</string>
    <string name="accent_color_pref_key">accent_color_pref_key</string>
    <string name="accent_color_pref_key_temp">accent_color_pref_key_temp</string>
    <string name="accent_color_pref_summary">Fab button, details</string>
    <string name="accent_color_pref_title">Highlight Color</string>
    <string name="accessibility_overflow">More</string>
    <string name="account_filter_activity_select_accounts_description">To view and access other contact account sources on your device,</string>
    <string name="account_info_hint_next">Tap next to see a list with popular providers in your region.</string>
    <string name="account_info_hint_provider">You need an account with a provider or your office PBX before you can use ZoiPer.</string>
    <string name="account_phone">Phone-only, unsynced</string>
    <string name="account_selection_mwi_count">%1$d new</string>
    <string name="account_selection_mwi_new_message_no_count">New messages</string>
    <string name="account_type">Account Type</string>
    <string name="account_wizard_create_account_button">Create an account</string>
    <string name="account_wizard_hostname_resolution_failure_dialog_message">"Wrong hostname or bad/missing internet connectivity.
TIP: double-check your hostname and network settings.

Do you want to continue?"</string>
    <string name="account_wizard_missing_username_dialog_text">Username is required.</string>
    <string name="account_wizard_providers_list_button">Providers list</string>
    <string name="account_wizard_wrong_hostname_format_dialog_message">Provided hostname is not valid.</string>
    <string name="action_bar_top_search">Search ...</string>
    <string name="action_menu_back_from_search">stop searching</string>
    <string name="action_menu_dialpad_button">dial pad</string>
    <string name="action_visit">Visit</string>
    <string name="activity_not_available">No app for that on this device</string>
    <string name="activity_title_contacts_filter">Contacts sources</string>
    <string name="add_additional_accounts_dialog_message">Need multiple accounts at the same place? Upgrade to Zoiper Gold and unlock this feature.</string>
    <string name="add_additional_accounts_dialog_title">Upgrade to Premium</string>
    <string name="add_contact_not_available">No contacts app available</string>
    <string name="adding_recipients">Adding recipients…</string>
    <string name="agree_and_continue_button_text">Agree &amp; Continue</string>
    <string name="all_contacts_empty">"You don't have any contacts yet"</string>
    <string name="all_contacts_empty_add_contact_action">Add a contact</string>
    <string name="all_contacts_tab_fragment_name">AllContactsTabFragment</string>
    <string name="already_subscribed_label_warning">Already subscribed !</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">@string/application_name</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_logo">Application logo</string>
    <string name="application_name">ZoiPer Premium</string>
    <string name="apply_button">Apply</string>
    <string name="apply_custom_colors_action">Apply colors</string>
    <string name="apply_theme_action">Apply theme</string>
    <string name="are_you_happy_with">Are you happy with %s?</string>
    <string name="attachment_error">Attachment Error</string>
    <string name="audio_driver_notice">Some phones might freeze or reboot when using openSL ES.</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_thread_stats_details">"Input:

Total count: %1$d
Overrun Count 25ms: %2$d
Overrun Count 50ms: %3$d

Output: 

Total count: %4$d
Overrun Count 25ms: %5$d
Overrun Count 50ms: %6$d"</string>
    <string name="audio_thread_stats_label">Audio High Thread Statistics:</string>
    <string name="audio_thread_stats_notification_text">Tap to see details statistics.</string>
    <string name="audio_thread_stats_notification_title">Audio High Thread Statistics</string>
    <string name="authentication_dialogs_negative_button">No</string>
    <string name="authentication_dialogs_positive_button">Yes</string>
    <string name="authentication_without_password_dialog_text">Few servers support authentication without password, are you sure you want to leave it empty?</string>
    <string name="auto_accept_not_in_range">Value not in range: 1-120</string>
    <string name="average_input_bitrate">Average received bitrate</string>
    <string name="average_output_bitrate">Average sent bitrate</string>
    <string name="background_color_pref_key">background_color_pref_key</string>
    <string name="background_color_pref_key_temp">background_color_pref_key_temp</string>
    <string name="background_color_pref_summary">Background color on all screens</string>
    <string name="background_color_pref_title">Background</string>
    <string name="background_statistics_charging">Charging</string>
    <string name="background_statistics_connectivity">Connectivity</string>
    <string name="background_statistics_push">Push</string>
    <string name="background_statistics_wakeup">Wakeup</string>
    <string name="background_stats_label">Background statistics:</string>
    <string name="bad_audio_dialog_title">Bad network quality detected!</string>
    <string name="bad_audio_quality_dialog_msg" formatted="false">"Your call quality is degraded because of a poor internet connection to the server.

 \tNetwork statistics:
 \tOutgoing packet loss: %.1f %%
 \tOutgoing jitter: %d ms
 \tIncoming packet loss: %.1f %%;"</string>
    <string name="bad_expiration_time">The server %1$s is insisting on a low maximum registration time of %2$s %3$s. For optimal battery savings, we recommend a maximum expiration time of 1 month.</string>
    <string name="banafo_login_view_authorized_logout_button_text">Logout</string>
    <string name="banafo_login_view_success_body_text">"You are now authenticated with Banafo!

Call recordings will be automatically uploaded.

You can see and manage your conversations in Banafo dashboard."</string>
    <string name="banafo_login_view_success_header_text">Success!</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_next">Next</string>
    <string name="cont_desc_application_logo">Application logo</string>
    <string name="content_description_detection_fragment">Detection</string>
    <string name="content_description_hostname_fragment">Hostname</string>
    <string name="detection_fragment_button_finish">Finish</string>
    <string name="detection_fragment_button_skip">Skip</string>
    <string name="detection_fragment_message_please_wait">Please wait, testing possible configurations</string>
    <string name="hostname_helper">"This could be called 'Domain', 'SIP Server', 'Registrar' or 'SIP Proxy'. For example 'sip.example.com' or '123.21.123.32:5060'.

Or you can just search for the name of your provider. May be we know the settings."</string>
    <string name="hostname_hint">hostname or provider</string>
    <string name="hostname_title">Fill in your hostname and select your provider from the list</string>
    <string name="onscreenChangeToVoiceText">Audio call</string>
    <string name="onscreen_add_call_text">Add call</string>
    <string name="onscreen_call_record_text">Call record</string>
    <string name="onscreen_call_statistics_text">Call statistics</string>
    <string name="onscreen_hold_text_unchecked">Hold Call</string>
    <string name="onscreen_manage_conference_text">Manage conference call</string>
    <string name="onscreen_merge_calls_text">Merge calls</string>
    <string name="onscreen_mute_text">Mute</string>
    <string name="onscreen_overflow_text">More options</string>
    <string name="onscreen_pause_video_text">Pause video</string>
    <string name="onscreen_show_dialpad_text">Dialpad</string>
    <string name="onscreen_swap_calls_text">Swap</string>
    <string name="onscreen_switch_camera_text">Show CallList</string>
    <string name="onscreen_transfer_call_text">Transfer call</string>
    <string name="onscreen_video_call_text">Video call</string>
    <string name="push_notification_subs_title">Push notifications</string>
    <string name="push_notification_trial_hint">You can cancel at any point without charge during the 7 day trial period</string>
    <string name="push_subs_monthly_button_text">1 month</string>
    <string name="push_subs_popup_text">"Push Proxy Service

LOWER battery usage
RELIABLE incoming calls &amp; messages
AVOID missing audio
FREE trial period

For more information on limitations and how it works, please visit our PUSH FAQ "<a href="https://www.zoiper.com/en/support/home/article/205/Zoiper%20mobile%20PUSH#android">here</a>"
"</string>
    <string name="push_subs_yearly_button_text">1 year</string>
    <string name="tls_error_cert_back_to_safety">Back to Safety</string>
    <string name="tls_error_cert_proceed_anyway">Proceed Anyway</string>
    <string name="tls_error_cert_technical_details">Technical Details</string>
    <string name="update_buttone">Upgrade</string>
    <string name="update_zoiper_text">A newer version of Zoiper is available.</string>
    <string name="update_zoiper_title">Upgrade Zoiper</string>
</resources>