<?xml version="1.0" encoding="utf-8"?>
<com.zoiper.android.util.themeframework.customviews.CustomLinearLayout android:orientation="vertical" android:id="@id/bottom_buttons_id" android:padding="0.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="0.0dp" android:layout_alignParentBottom="true" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.zoiper.android.util.themeframework.customviews.CustomLinearLayout android:gravity="center|bottom" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:baselineAligned="false">
        <ToggleButton android:id="@id/audio_button_id" android:background="@drawable/btn_compound_audio" android:contentDescription="@string/audio_mode_speaker" style="@style/InCallCompoundButton" />
        <ToggleButton android:id="@id/mute_button_id" android:background="@drawable/btn_compound_mute" android:contentDescription="@string/onscreen_mute_text" style="@style/InCallCompoundButton" />
        <ToggleButton android:id="@id/dialpad_button_id" android:background="@drawable/btn_compound_dialpad" android:visibility="gone" android:contentDescription="@string/onscreen_show_dialpad_text" style="@style/InCallCompoundButton" />
        <com.zoiper.android.util.themeframework.customviews.CustomToggleButton android:id="@id/hold_button_id" android:background="@drawable/btn_compound_hold" android:visibility="gone" android:contentDescription="@string/onscreen_hold_text_unchecked" style="@style/InCallCompoundButton" />
        <com.zoiper.android.util.themeframework.customviews.CustomImageButton android:id="@id/swap_button_id" android:background="@drawable/btn_swap" android:visibility="gone" android:contentDescription="@string/onscreen_swap_calls_text" style="@style/InCallButton" />
        <com.zoiper.android.util.themeframework.customviews.CustomImageButton android:id="@id/change_to_video_button_id" android:background="@drawable/btn_change_to_video" android:visibility="gone" android:contentDescription="@string/onscreen_video_call_text" style="@style/InCallButton" />
        <com.zoiper.android.util.themeframework.customviews.CustomImageButton android:id="@id/downgrade_to_audio_button_id" android:background="@drawable/btn_change_to_audio" android:visibility="gone" android:contentDescription="@string/onscreenChangeToVoiceText" style="@style/InCallButton" />
        <ToggleButton android:id="@id/show_calllist_button_id" android:background="@drawable/btn_compound_video_switch" android:visibility="gone" android:contentDescription="@string/onscreen_switch_camera_text" style="@style/InCallCompoundButton" />
        <ToggleButton android:id="@id/pause_video_button_id" android:background="@drawable/btn_compound_video_off" android:visibility="gone" android:contentDescription="@string/onscreen_pause_video_text" style="@style/InCallCompoundButton" />
        <com.zoiper.android.util.themeframework.customviews.CustomImageButton android:id="@id/add_button_id" android:background="@drawable/btn_add" android:visibility="gone" android:contentDescription="@string/onscreen_add_call_text" style="@style/InCallButton" />
        <com.zoiper.android.util.themeframework.customviews.CustomImageButton android:id="@id/transfer_button_id" android:background="@drawable/btn_transfer" android:visibility="gone" android:contentDescription="@string/onscreen_transfer_call_text" style="@style/InCallButton" />
        <com.zoiper.android.util.themeframework.customviews.CustomImageButton android:id="@id/call_statistics_id" android:background="@drawable/btn_statistics" android:visibility="gone" android:contentDescription="@string/onscreen_call_statistics_text" style="@style/InCallButton" />
        <ToggleButton android:id="@id/call_record_id" android:background="@drawable/btn_record" android:visibility="gone" android:contentDescription="@string/onscreen_call_record_text" style="@style/InCallCompoundButton" />
        <com.zoiper.android.util.themeframework.customviews.CustomImageButton android:id="@id/merge_button_id" android:background="@drawable/btn_merge" android:visibility="gone" android:contentDescription="@string/onscreen_merge_calls_text" style="@style/InCallButton" />
        <com.zoiper.android.util.themeframework.customviews.CustomImageButton android:id="@id/overflow_button_id" android:background="@drawable/btn_overflow" android:visibility="gone" android:contentDescription="@string/onscreen_overflow_text" style="@style/InCallButton" />
        <com.zoiper.android.util.themeframework.customviews.CustomImageButton android:id="@id/manage_video_call_conference_button_id" android:background="@null" android:visibility="gone" android:contentDescription="@string/onscreen_manage_conference_text" style="@style/InCallButton" />
    </com.zoiper.android.util.themeframework.customviews.CustomLinearLayout>
</com.zoiper.android.util.themeframework.customviews.CustomLinearLayout>
