<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/hostname_fragment" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="match_parent" android:contentDescription="@string/content_description_hostname_fragment"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.zoiper.android.util.themeframework.customviews.CustomTextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/secondary_dark" android:id="@id/textview_hostname_title_id" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="26.0dp" android:layout_marginTop="32.0dp" android:layout_marginRight="26.0dp" android:text="@string/hostname_title" android:layout_marginStart="26.0dp" android:layout_marginEnd="26.0dp" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.zoiper.android.widget.TextInputLayoutHelper android:theme="@style/DialogEditTextStyle" android:orientation="vertical" android:id="@id/textinputlayout_hostname_id" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="24.0dp" android:hint="@string/hostname_hint" android:labelFor="@id/edittext_hostname_id" android:importantForAutofill="noExcludeDescendants" app:colorControlActivated="@color/text_hint_color" app:helper_text="@string/hostname_helper" app:helper_text_container_background="@color/hint_container_background" app:helper_text_size="12.0sp" app:layout_constraintLeft_toLeftOf="@id/textview_hostname_title_id" app:layout_constraintRight_toRightOf="@id/textview_hostname_title_id" app:layout_constraintTop_toBottomOf="@id/textview_hostname_title_id">
        <com.zoiper.android.util.themeframework.customviews.CustomEditText android:textColor="@color/secondary_light" android:id="@id/edittext_hostname_id" android:background="@drawable/edit_text_states" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dp" android:ems="10" android:inputType="textPersonName|textNoSuggestions" android:textCursorDrawable="@drawable/custom_cursor" android:importantForAutofill="noExcludeDescendants" />
    </com.zoiper.android.widget.TextInputLayoutHelper>
    <com.zoiper.android.util.themeframework.customviews.CustomTextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="@color/hostname_next_disabled" android:id="@id/textview_next_id" android:padding="26.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dp" android:text="@string/button_next" android:layout_marginEnd="8.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/textinputlayout_hostname_id" />
</androidx.constraintlayout.widget.ConstraintLayout>
