<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/primary_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/min_dialog_fragment_width">
        <TextView android:textSize="17.0sp" android:textStyle="bold" android:textColor="@color/secondary_light" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dp" android:layout_marginTop="16.0dp" android:text="@string/push_notification_subs_title" android:layout_marginStart="16.0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="14.0sp" android:textColor="@color/secondary_light" android:id="@id/main_text" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="16.0dp" android:layout_marginTop="16.0dp" android:layout_marginRight="16.0dp" android:text="@string/push_subs_popup_text" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" />
        <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/red_700" android:id="@id/cancel_info" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="24.0dp" android:layout_marginTop="16.0dp" android:layout_marginRight="24.0dp" android:text="@string/push_notification_trial_hint" android:layout_marginStart="24.0dp" android:layout_marginEnd="24.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/main_text" />
        <Button android:id="@id/yearly_subscription" android:background="@drawable/subscription_button_background" android:paddingLeft="16.0dp" android:paddingRight="16.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dp" android:layout_marginTop="16.0dp" android:layout_marginRight="8.0dp" android:text="@string/push_subs_yearly_button_text" android:layout_marginStart="8.0dp" android:layout_marginEnd="8.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cancel_info" />
        <Button android:id="@id/monthly_subscription" android:background="@drawable/subscription_button_background" android:paddingLeft="16.0dp" android:paddingRight="16.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dp" android:layout_marginTop="8.0dp" android:layout_marginRight="8.0dp" android:text="@string/push_subs_monthly_button_text" android:layout_marginStart="8.0dp" android:layout_marginEnd="8.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/yearly_subscription" />
        <Button android:id="@id/cancel" android:background="@drawable/subscription_cancel_button_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dp" android:layout_marginTop="8.0dp" android:layout_marginRight="8.0dp" android:layout_marginBottom="16.0dp" android:text="@string/button_cancel" android:layout_marginStart="8.0dp" android:layout_marginEnd="8.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/monthly_subscription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
