<?xml version="1.0" encoding="utf-8"?>
<com.zoiper.android.util.themeframework.customviews.CustomConstraintLayout android:orientation="vertical" android:padding="@dimen/banafo_login_views_padding" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.zoiper.android.util.themeframework.customviews.CustomTextView android:textColor="#a4c739" android:id="@id/banafo_login_view_success_layout_header_text" android:text="@string/banafo_login_view_success_header_text" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/BanafoActivitySuccessAndFailureHeaderTextStyle" />
    <com.zoiper.android.util.themeframework.customviews.CustomTextView android:text="@string/banafo_login_view_success_body_text" android:textAlignment="viewStart" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/banafo_login_view_success_layout_header_text" style="@style/BanafoActivityDefaultBodyTextStyle" />
    <com.zoiper.android.util.themeframework.customviews.CustomButton android:id="@id/banafo_login_view_success_layout_logout_button" android:text="@string/banafo_login_view_authorized_logout_button_text" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/BanafoActivityButtonStyle" />
</com.zoiper.android.util.themeframework.customviews.CustomConstraintLayout>
