<?xml version="1.0" encoding="utf-8"?>
<com.zoiper.android.util.themeframework.customviews.CustomLinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.0">
        <com.zoiper.android.util.themeframework.customviews.CustomLinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <com.zoiper.android.util.themeframework.customviews.CustomRelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp">
                <com.zoiper.android.util.themeframework.customviews.CustomImageView android:id="@id/zoiper_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@null" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/cont_desc_application_logo" />
                <com.zoiper.android.util.themeframework.customviews.CustomTextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/update_zoiper_title" android:paddingLeft="10.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_zoiper_title" android:layout_toRightOf="@id/zoiper_logo" android:layout_centerVertical="true" />
            </com.zoiper.android.util.themeframework.customviews.CustomRelativeLayout>
            <View android:background="#8dc63f" android:layout_width="match_parent" android:layout_height="3.0dp" />
            <com.zoiper.android.util.themeframework.customviews.CustomTextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:paddingLeft="10.0dp" android:paddingTop="10.0dp" android:paddingRight="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/update_zoiper_text" />
        </com.zoiper.android.util.themeframework.customviews.CustomLinearLayout>
    </ScrollView>
    <com.zoiper.android.util.themeframework.customviews.CustomLinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
        <com.zoiper.android.util.themeframework.customviews.CustomButton android:textColor="@drawable/update_button_text_color_selector" android:id="@id/updateButton" android:background="@drawable/update_button_backgraund_selector" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:text="@string/update_buttone" android:layout_weight="0.5" />
        <com.zoiper.android.util.themeframework.customviews.CustomButton android:textColor="@drawable/cancel_button_text_color_selector" android:id="@id/cancelButton" android:background="@drawable/cancel_button_backgraund_selector" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:text="@string/button_cancel" android:layout_weight="0.5" />
    </com.zoiper.android.util.themeframework.customviews.CustomLinearLayout>
</com.zoiper.android.util.themeframework.customviews.CustomLinearLayout>
