<?xml version="1.0" encoding="utf-8"?>
<com.zoiper.android.util.themeframework.customviews.CustomLinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.zoiper.android.util.themeframework.customviews.CustomButton android:gravity="right" android:id="@id/proceedButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tls_error_cert_proceed_anyway" style="@style/GenericDialogButtonTheme" />
    <com.zoiper.android.util.themeframework.customviews.CustomButton android:gravity="right" android:id="@id/backButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tls_error_cert_back_to_safety" style="@style/GenericDialogButtonTheme" />
    <com.zoiper.android.util.themeframework.customviews.CustomButton android:gravity="right" android:id="@id/moreButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tls_error_cert_technical_details" style="@style/GenericDialogButtonTheme" />
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.zoiper.android.util.themeframework.customviews.CustomLinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.zoiper.android.util.themeframework.customviews.CustomTextView android:id="@id/moreText" android:padding="5.0dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.zoiper.android.util.themeframework.customviews.CustomLinearLayout>
    </ScrollView>
</com.zoiper.android.util.themeframework.customviews.CustomLinearLayout>
