<?xml version="1.0" encoding="utf-8"?>
<com.zoiper.android.util.themeframework.customviews.CustomScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/detection_fragment" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="match_parent" android:contentDescription="@string/content_description_detection_fragment"
      xmlns:app="http://schemas.android.com/apk/res-auto">
        <com.zoiper.android.util.themeframework.customviews.CustomTextView android:textSize="@dimen/detection_fragment_message_text_size" android:textColor="@color/detection_fragment_message_text_color" android:id="@id/textview_message_id" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/detection_fragment_message_please_wait" app:layout_constraintEnd_toEndOf="@id/listview_protocol_transport_id" app:layout_constraintStart_toStartOf="@id/listview_protocol_transport_id" app:layout_constraintTop_toTopOf="parent" />
        <com.zoiper.android.util.themeframework.customviews.CustomTextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="@color/detection_fragment_skip_enabled" android:id="@id/textview_finish_id" android:paddingLeft="24.0dp" android:paddingTop="24.0dp" android:paddingRight="24.0dp" android:paddingBottom="24.0dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/detection_fragment_button_finish" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/listview_protocol_transport_id" />
        <com.zoiper.android.util.themeframework.customviews.CustomTextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="@color/detection_fragment_skip_enabled" android:id="@id/textview_skip_id" android:paddingLeft="24.0dp" android:paddingTop="24.0dp" android:paddingRight="24.0dp" android:paddingBottom="24.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/detection_fragment_button_skip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/listview_protocol_transport_id" />
        <ListView android:id="@id/listview_protocol_transport_id" android:layout_width="0.0dp" android:layout_height="256.0dp" android:layout_marginLeft="24.0dp" android:layout_marginTop="24.0dp" android:layout_marginRight="24.0dp" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/textview_message_id" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.zoiper.android.util.themeframework.customviews.CustomScrollView>
